kube/deploy/core/db/pg/clusters/template/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "apps-to-pg-${PG_APP_NAME}"
spec:
  endpointSelector:
    matchLabels:
      db.home.arpa/pg: "pg-${PG_APP_NAME}"
  egress:
    - toEndpoints: &pg
        - matchLabels:
            cnpg.io/cluster: "pg-${PG_APP_NAME}"
          matchExpressions: &ns
            - key: io.kubernetes.pod.namespace
              operator: Exists
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: "pg-${PG_APP_NAME}"
          matchExpressions: *ns
      toPorts:
        - ports:
            - port: "5432"
    - toEndpoints: *pg
      icmps: [{}]
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "pg-${PG_APP_NAME}"
  namespace: &app "${PG_APP_NS}"
spec:
  endpointSelector: &crunchy
    matchLabels:
      postgres-operator.crunchydata.com/cluster: "pg-${PG_APP_NAME}"
  ingress:
    # allow Postgres pods to talk to each other
    - fromEndpoints: [*crunchy]
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow operator to connect
    - fromEndpoints:
        - matchLabels: &operator
            io.kubernetes.pod.namespace: crunchy-pgo
            # postgres-operator.crunchydata.com/control-plane: pgo
    # allow labelled pods to connect to Postgres only and ping with pg_health
    - fromEndpoints: &pg
        - matchLabels:
            db.home.arpa/pg: "pg-${PG_APP_NAME}"
          matchExpressions:
            - &ns
              key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "5432"
    - fromEndpoints: *pg
      icmps: [{}]
  egress:
    # allow Postgres pods to talk to each other
    - toEndpoints: [*crunchy]
    # allow access to apiserver
    # this is needed for initdb and calling back to operator
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
    # connect to operator
    - toEndpoints:
        - matchLabels: *operator
    # connect to Rook-Ceph RGW/S3 object store in-cluster
    - toServices:
        - k8sServiceSelector:
            namespace: rook-ceph
            selector:
              matchLabels:
                rgw: "${CLUSTER_NAME}"
    - toEndpoints:
        - matchLabels:
            rgw: "${CLUSTER_NAME}"
            io.kubernetes.pod.namespace: rook-ceph
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "pg-${PG_APP_NAME}-cnpg"
  namespace: &app "${PG_APP_NS}"
spec:
  endpointSelector: &cnpg
    matchLabels:
      cnpg.io/cluster: &name "pg-${PG_APP_NAME}"
  ingress:
    # allow Postgres pods to talk to each other
    - fromEndpoints: [*cnpg]
    # allow operator to connect
    - fromEndpoints:
        - matchLabels: &operator
            io.kubernetes.pod.namespace: cnpg
            app.kubernetes.io/name: cloudnative-pg
    # allow labelled pods to connect to Postgres only and ping with pg_health
    - fromEndpoints: &pg
        - matchLabels:
            db.home.arpa/pg: "pg-${PG_APP_NAME}"
          matchExpressions:
            - &ns
              key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "5432"
    - fromEndpoints: *pg
      icmps: [{}]
  egress:
    # allow Postgres pods to talk to each other
    - toEndpoints: [*cnpg]
    # connect to operator
    - toEndpoints:
        - matchLabels: *operator
    # CNPG webhook
    - toServices:
        - k8sService:
            serviceName: cnpg-webhook-service
            namespace: cnpg
